# agentic-service-wrapper

./: .env.example  .gitignore  API_DOCS_IMPROVEMENTS.md  Dockerfile  RAILWAY_DEPLOYMENT.md  README_CLIENT_INTEGRATION.md  agentic_service.py  call_echo_agent.py  call_echo_agent_320.py  call_echo_agent_masumi.py  call_masumi_agent.py  check_wallets.py  crew.py  echo_agent_with_payments.py  fund_wallets.py  get_payment_source_info.py  hello.py  main.py  pyproject.toml  railway.json  readme.md  register_echo_agent.py  requirements-client.txt  requirements.txt  simple_test.py  test_api.py  test_echo_agent_integration.py
archive/: MASUMI_AGENT_ACCESS_GUIDE.md  PAYMENT_INTEGRATION_GUIDE.md  README.md  README_MASUMI_INTEGRATION.md  call_echo_agent.py  call_echo_agent_320.py  call_masumi_agent.py  client_pycardano.py  client_without_payment_node.py  echo_agent.py  echo_agent_with_payments.py  register_echo_agent.py  test_echo_agent.py  test_payment_integration.py
config/: agents.yaml  tasks.yaml
