[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-service"
version = "0.1.0"
description = "Simple Echo Agent for Masumi Network"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0"
]

[tool.setuptools]
py-modules = ["echo_agent", "test_echo_agent", "register_echo_agent", "call_echo_agent"]
